--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tennis matches</title>
+    <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
+    <h1>Tennis app</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
